# cognosos

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
CognosOS Launcher.app/Contents/: Info.plist
CognosOS Launcher.app/Contents/MacOS/: CognosOS Launcher
CognosOS Launcher.app/Contents/Resources/: CognosOSIcon.icns
alembic/: env.py
alembic/versions/: 202606160001_phase1_schema.py  202606160002_flow_sessions_obsidian.py  202606170001_breakthrough_canvas_stages.py
backend/app/: main.py
backend/app/api/: routes_cards.py  routes_entries.py  routes_flow_sessions.py  routes_health.py  routes_modules.py  routes_search.py  routes_time_capsules.py  routes_triggers.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/graph/: due_capsule_graph.py  ingestion_graph.py  module_graph.py  state.py
backend/app/models/: db_models.py  enums.py  schemas.py
backend/app/prompts/: ai_judge.md  extractor.md  module_avsi.md  module_check_review.md  module_decision.md  module_future_self.md  module_reciprocity.md  module_scaffolding.md
backend/app/providers/: embedder_base.py  embedder_gemini.py  embedder_mock.py  embedder_sentence_transformers.py  llm_anthropic.py  llm_base.py  llm_gemini.py  llm_json_provider.py  llm_mock.py  llm_openai.py  llm_remote_stub.py
backend/app/services/: breakthrough_canvas_service.py  card_service.py  entry_service.py  (+8 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
scripts/: start-cognosos.command  stop-cognosos.command
(+25 files in other folders)
