[project]
name = "cognosos"
version = "0.1.0"
description = "Local-first personal cognition engine MVP backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.2.0"
]
embeddings = [
  "sentence-transformers>=3.0.0"
]
graph = [
  "langgraph>=0.2.0"
]
gemini = [
  "google-genai>=1.0.0"
]
openai = [
  "openai>=1.40.0"
]
anthropic = [
  "anthropic>=0.40.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/app/tests"]
addopts = "-q"
